--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es6",
     "outDir": "dist",
     "noImplicitAny": false,
-    "sourceMap": false
+    "sourceMap": false,
+    "strictNullChecks": true
   }
 }
