--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pokemon battle server",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node dist/index.js"
+    "start": "tsc && node dist/index.js",
+    "test": "mocha --compilers preprocessor test/**Test.ts"
   },
   "author": "Federkun <federkun@gmail.com>",
   "license": "MIT",
@@ -15,6 +16,9 @@
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
+    "@types/mocha": "^2.2.42",
+    "mocha": "^3.5.0",
+    "ts-node": "^3.3.0",
     "typescript": "^2.5.2"
   }
 }
