--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "devDependencies": {
     "@types/mocha": "^2.2.42",
+    "@types/sinon": "^2.3.3",
     "mocha": "^3.5.0",
+    "sinon": "^3.2.1",
     "ts-node": "^3.3.0",
     "typescript": "^2.5.2"
   }
