--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokemon-battle-server",
+  "name": "@pokegame/battle-server",
   "version": "0.0.0",
   "description": "Pokemon battle server",
   "main": "index.js",
