--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@pokegame/battle-engine": "0.0.1",
     "@types/node": "^8.0.28",
     "@types/socket.io": "^1.4.30",
-    "socket.io": "^2.0.3"
+    "express": "^4.15.4",
+    "socket.io": "^2.0.3",
+    "socketio-jwt": "^4.5.0"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.43",
