--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "license": "MIT",
   "dependencies": {
     "@pokegame/battle-engine": "0.0.1",
+    "@types/express": "^4.0.37",
     "@types/node": "^8.0.28",
     "@types/socket.io": "^1.4.30",
+    "@types/uuid": "^3.4.2",
+    "body-parser": "^1.18.1",
     "express": "^4.15.4",
     "jsonist": "^2.1.0",
     "socket.io": "^2.0.3",
-    "socketio-jwt-auth": "github:Federkun/socketio-jwt-auth#c4e1df03c98dca418461ba8772ff04c535eabe05"
+    "socketio-jwt-auth": "github:Federkun/socketio-jwt-auth#c4e1df03c98dca418461ba8772ff04c535eabe05",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.43",
